[FLINK-35109] Fix SmokeKafkaITCase for later java versions
Workaround for FLINK-36454.